--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../src/index.css" />
 		<title>Restaurant list</title>
+		<link rel="shortcut icon" href="./img/restaurant-icon.svg" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
